--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@ html += "</div>";
 }
 </script>
 <div class="form-row">
-<input type="number"  id="rnc" class="form-control" placeholder="RNC" required>
-<input type="number"  id="cellid" class="form-control" placeholder="CellID" required>
-<input type="number"  id="longcid" class="form-control" placeholder="Long CellID" required>
-<input type="number"  id="sec" class="form-control" placeholder="Sector" required>
-<input type="number"  id="enb" class="form-control" placeholder="Enodeb" required>
+<input type="number"  id="rnc" class="form-control" placeholder="RNC(UMTS)" required>
+<input type="number"  id="cellid" class="form-control" placeholder="CellID(UMTS)" required>
+<input type="number"  id="longcid" class="form-control" placeholder="Long CellID(LTE/UMTS)" required>
+<input type="number"  id="sec" class="form-control" placeholder="Sector(LTE)" required>
+<input type="number"  id="enb" class="form-control" placeholder="Enodeb(LTE)" required>
 
 
 	
